--- a/1_html/html5-spaceX/nossas-naves.html
+++ b/1_html/html5-spaceX/nossas-naves.html
@@ -11,7 +11,7 @@
    <header>
       <nav>
          <img src="img/logo.png" alt="logo">
-         <a href="nossas-naves.html">Nossas naves</a> | <a href="contato.html">Contato</a>
+         <a href="index.html">Página Inicial</a> | <a href="contato.html">Contato</a>
       </nav>
    </header>
    <hr>
