--- a/4_dom/Sistema de cadastro de imóveis/index.html
+++ b/4_dom/Sistema de cadastro de imóveis/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exercício 19</title>
+
     <script src="js/app.js"></script>
     <script src="js/imovel.js"></script>
+    <script src="js/main.js"></script>
+
 </head>
 <body>
 <h3>Cadastro de Imóveis</h3>
 
-<form onsubmit="app.addProperty()">
+<form onsubmit="app.adicionarImovel()">
     <p>
         <label>Tipo: </label>
         <select name="tipo-imovel">
@@ -22,21 +25,21 @@
 
     <p>
         <label>Área: </label>
-        <input type="number" name="area" step="any" min="0" />
+        <input type="number" name="area" step="any" min="0"/>
     </p>
 
     <p>
-        <input type="checkbox" name="imovel-alugado-check" /> Alugado
+        <input type="checkbox" name="imovel-alugado-check"/> Alugado
     </p>
 
     <button type="submit">Salvar</button>
     <button type="button" onclick="app.limparFormulario()">Limpar</button>
 </form>
 
-<br />
+<br/>
 
 <h3>Imóveis cadastrados</h3>
 
-<ul id="properties"></ul>
+<ul id="imoveis-registrados"></ul>
 </body>
 </html>
